--- a/index.html
+++ b/index.html
@@ -519,80 +519,84 @@
 
     <footer>
       <div class="footer container">
-        <div class="footer-flex">
-          <a href="./" class="logo-white">
-            <span class="logo-blue">Web</span>Studio
-          </a>
+        <div class="tablet-container">
+          <div class="logo-add">
+            <div class="logo-footer">
+              <a href="./" class="logo-white">
+                <span class="logo-blue">Web</span>Studio
+              </a>
+            </div>
 
-          <address class="footer-flex">
-            <ul class="footer-flex list">
-              <li class="footer-flex-item">
-                <p class="address-str">
-                  г.Киев, пр-т Леси Украинки, 26
-                </p>
-              </li>
-              <li class="footer-flex-item">
-                <a href="mailto:info@devstudio.com" class="address-contact"
-                  >info@devstudio.com</a
+            <address class="footer-address">
+              <ul class="footer-flex list">
+                <li class="footer-flex-item">
+                  <p class="address-str">
+                    г.Киев, пр-т Леси Украинки, 26
+                  </p>
+                </li>
+                <li class="footer-flex-item">
+                  <a href="mailto:info@devstudio.com" class="address-contact"
+                    >info@devstudio.com</a
+                  >
+                </li>
+                <li class="footer-flex-item">
+                  <a href="tel:+380961111111" class="address-contact"
+                    >+38 096 111 11 11</a
+                  >
+                </li>
+              </ul>
+            </address>
+          </div>
+
+          <div class="invite-flex">
+            <b class="invite">присоединяйтесь</b>
+            <ul class="invite-list list">
+              <li class="invite-item">
+                <a
+                  href=""
+                  aria-label="Ссылка на инстаграм"
+                  class="link invite-border"
                 >
+                  <svg class="invite-icon">
+                    <use href="./images/symbol-defs.svg#icon-instagram"></use>
+                  </svg>
+                </a>
               </li>
-              <li class="footer-flex-item">
-                <a href="tel:+380961111111" class="address-contact"
-                  >+38 096 111 11 11</a
+              <li class="invite-item">
+                <a
+                  href=""
+                  aria-label="Ссылка на твиттер"
+                  class="link invite-border"
                 >
+                  <svg class="invite-icon">
+                    <use href="./images/symbol-defs.svg#icon-twitter"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="invite-item">
+                <a
+                  href=""
+                  aria-label="Ссылка на фейсбук"
+                  class="link invite-border"
+                >
+                  <svg class="invite-icon">
+                    <use href="./images/symbol-defs.svg#icon-facebook"></use>
+                  </svg>
+                </a>
+              </li>
+              <li class="invite-item">
+                <a
+                  href=""
+                  aria-label="Ссылка на линкедин"
+                  class="link invite-border"
+                >
+                  <svg class="invite-icon">
+                    <use href="./images/symbol-defs.svg#icon-linkedin"></use>
+                  </svg>
+                </a>
               </li>
             </ul>
-          </address>
-        </div>
-
-        <div class="invite-flex">
-          <b class="invite invite-flex">присоединяйтесь</b>
-          <ul class="invite-list list">
-            <li class="invite-item">
-              <a
-                href=""
-                aria-label="Ссылка на инстаграм"
-                class="link invite-border"
-              >
-                <svg class="invite-icon">
-                  <use href="./images/symbol-defs.svg#icon-instagram"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="invite-item">
-              <a
-                href=""
-                aria-label="Ссылка на твиттер"
-                class="link invite-border"
-              >
-                <svg class="invite-icon">
-                  <use href="./images/symbol-defs.svg#icon-twitter"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="invite-item">
-              <a
-                href=""
-                aria-label="Ссылка на фейсбук"
-                class="link invite-border"
-              >
-                <svg class="invite-icon">
-                  <use href="./images/symbol-defs.svg#icon-facebook"></use>
-                </svg>
-              </a>
-            </li>
-            <li class="invite-item">
-              <a
-                href=""
-                aria-label="Ссылка на линкедин"
-                class="link invite-border"
-              >
-                <svg class="invite-icon">
-                  <use href="./images/symbol-defs.svg#icon-linkedin"></use>
-                </svg>
-              </a>
-            </li>
-          </ul>
+          </div>
         </div>
 
         <div class="subscribe-container">
