--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <header>
-      <div class="container main-nav">
+      <div class="main-nav container">
         <nav class="site-nav">
           <div class="logo-nav">
             <a href="./" class="logo">
@@ -44,7 +44,7 @@
             </svg>
           </button>
         </nav>
-        <div class="menu-container container" id="menu-container" data-menu>
+        <div class="menu-container" id="menu-container" data-menu>
           <ul class="site-nav-list list">
             <li class="item">
               <a href="" class="link current">Студия </a>
