--- a/index.html
+++ b/index.html
@@ -226,12 +226,63 @@
 
           <ul class="team-list list">
             <li class="team-item">
-              <img
-                src="./images/team/john.jpg"
-                alt="Николай Кучеренко"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/nick/nick-270.webp 270w,
+                    ./images/team/nick/nick-540.webp 540w
+                  "
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/nick/nick-354.webp 354w,
+                    ./images/team/nick/nick-708.webp 708w
+                  "
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/nick/nick-450.webp 450w,
+                    ./images/team/nick/nick-900.webp 900w
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/nick/nick-270.jpg 270w,
+                    ./images/team/nick/nick-540.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/nick/nick-354.jpg 354w,
+                    ./images/team/nick/nick-708.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/nick/nick-450.jpg 450w,
+                    ./images/team/nick/nick-900.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  src="./images/team/nick/nick-450.jpg"
+                  alt="Николай Кучеренко"
+                />
+              </picture>
 
               <h3 class="team-name">Николай Кучеренко</h3>
               <p class="team-profession">Product Designer</p>
@@ -285,12 +336,63 @@
             </li>
 
             <li class="team-item">
-              <img
-                src="./images/team/marta.jpg"
-                alt="Ольга Иванова"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/olga/olga-270.webp 270w,
+                    ./images/team/olga/olga-540.webp 540w
+                  "
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/olga/olga-354.webp 354w,
+                    ./images/team/olga/olga-708.webp 708w
+                  "
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/olga/olga-450.webp 450w,
+                    ./images/team/olga/olga-900.webp 900w
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/olga/olga-270.jpg 270w,
+                    ./images/team/olga/olga-540.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/olga/olga-354.jpg 354w,
+                    ./images/team/olga/olga-708.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/olga/olga-450.jpg 450w,
+                    ./images/team/olga/olga-900.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  src="./images/team/olga/olga-450.jpg"
+                  alt="Ольга Иванова"
+                />
+              </picture>
 
               <h3 class="team-name">Ольга Иванова</h3>
               <p class="team-profession">Frontend Developer</p>
@@ -344,12 +446,63 @@
             </li>
 
             <li class="team-item">
-              <img
-                src="./images/team/robert.jpg"
-                alt="Андрей Шевченко"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/andr/andr-270.webp 270w,
+                    ./images/team/andr/andr-540.webp 540w
+                  "
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/andr/andr-354.webp 354w,
+                    ./images/team/andr/andr-708.webp 708w
+                  "
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/andr/andr-450.webp 450w,
+                    ./images/team/andr/andr-900.webp 900w
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/andr/andr-270.jpg 270w,
+                    ./images/team/andr/andr-540.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/andr/andr-354.jpg 354w,
+                    ./images/team/andr/andr-708.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/andr/andr-450.jpg 450w,
+                    ./images/team/andr/andr-900.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  src="./images/team/andr/andr-450.jpg"
+                  alt="Андрей Шевченко"
+                />
+              </picture>
 
               <h3 class="team-name">Андрей Шевченко</h3>
               <p class="team-profession">Marketing</p>
@@ -403,12 +556,63 @@
             </li>
 
             <li class="team-item">
-              <img
-                src="./images/team/martin.jpg"
-                alt="Иван Николаев"
-                width="270"
-                height="260"
-              />
+              <picture>
+                <source
+                  srcset="
+                    ./images/team/ivan/ivan-270.webp 270w,
+                    ./images/team/ivan/ivan-540.webp 540w
+                  "
+                  type="image/webp"
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/ivan/ivan-354.webp 354w,
+                    ./images/team/ivan/ivan-708.webp 708w
+                  "
+                  type="image/webp"
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/ivan/ivan-450.webp 450w,
+                    ./images/team/ivan/ivan-900.webp 900w
+                  "
+                  type="image/webp"
+                  media="(max-width: 767px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/ivan/ivan-270.jpg 270w,
+                    ./images/team/ivan/ivan-540.jpg 540w
+                  "
+                  media="(min-width: 1200px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/ivan/ivan-354.jpg 354w,
+                    ./images/team/ivan/ivan-708.jpg 708w
+                  "
+                  media="(min-width: 768px)"
+                />
+
+                <source
+                  srcset="
+                    ./images/team/ivan/ivan-450.jpg 450w,
+                    ./images/team/ivan/ivan-900.jpg 900w
+                  "
+                  media="(max-width: 767px)"
+                />
+
+                <img
+                  src="./images/team/ivan/ivan-450.jpg"
+                  alt="Иван Николаев"
+                />
+              </picture>
 
               <h3 class="team-name">Иван Николаев</h3>
               <p class="team-profession">UI Designer</p>
