--- a/index.html
+++ b/index.html
@@ -171,12 +171,29 @@
             <li class="example-item">
               <a href="">
                 <div class="example-tumb">
-                  <img
-                    src="./images/laptop.jpg"
-                    alt="Компьютер"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/examples/laptop-370.jpg 370w,
+                        ./images/examples/laptop-740.jpg 740w
+                      "
+                    />
+
+                    <source
+                      srcset="
+                        ./images/examples/laptop-370.webp 370w,
+                        ./images/examples/laptop-740.webp 740w
+                      "
+                      type="image/webp"
+                    />
+
+                    <img
+                      src="./images/examples/laptop-370.jpg"
+                      alt="Компьютер"
+                      width="370"
+                    />
+                  </picture>
+
                   <div class="example-overlay">
                     <p class="example-text">Десктопные приложения</p>
                   </div>
@@ -187,12 +204,28 @@
             <li class="example-item">
               <a href="">
                 <div class="example-tumb">
-                  <img
-                    src="./images/mobile.jpg"
-                    alt="Смартфон"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/examples/mobile-370.jpg 370w,
+                        ./images/examples/mobile-740.jpg 740w
+                      "
+                    />
+
+                    <source
+                      srcset="
+                        ./images/examples/mobile-370.webp 370w,
+                        ./images/examples/mobile-740.webp 740w
+                      "
+                      type="image/webp"
+                    />
+
+                    <img
+                      src="./images/examples/mobile-370.jpg"
+                      alt="Компьютер"
+                      width="370"
+                    />
+                  </picture>
                   <div class="example-overlay">
                     <p class="example-text">Мобильные приложения</p>
                   </div>
@@ -203,12 +236,28 @@
             <li class="example-item">
               <a href="">
                 <div class="example-tumb">
-                  <img
-                    src="./images/designe.jpg"
-                    alt="Интерфейс"
-                    width="370"
-                    height="294"
-                  />
+                  <picture>
+                    <source
+                      srcset="
+                        ./images/examples/designe-370.jpg 370w,
+                        ./images/examples/designe-740.jpg 740w
+                      "
+                    />
+
+                    <source
+                      srcset="
+                        ./images/examples/designe-370.webp 370w,
+                        ./images/examples/designe-740.webp 740w
+                      "
+                      type="image/webp"
+                    />
+
+                    <img
+                      src="./images/examples/designe-370.jpg"
+                      alt="Компьютер"
+                      width="370"
+                    />
+                  </picture>
                   <div class="example-overlay">
                     <p class="example-text">Дизайнерские решения</p>
                   </div>
