--- a/portfolio.html
+++ b/portfolio.html
@@ -543,5 +543,7 @@
         <p class="copyright">2020 &#124; Developed by GoIT Students</p>
       </div> -->
     </footer>
+
+    <script src="./js/menu.js"></script>
   </body>
 </html>
